--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,123 @@
 @import "./layaout/_grid.scss";
 @import "./base/_container.scss";
 @import "./base/_container.scss";
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color:hsla(235, 10%, 21%, 0.507);
+	z-index: 100;
+	overflow-y: scroll;
+}
+
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	max-width: 528px;
+	background-color: #fff;
+	border-radius: 4px;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+	0px 1px 1px rgba(0, 0, 0, 0.14),
+	0px 2px 1px rgba(0, 0, 0, 0.2);
+
+	@media screen and (max-width:479px) {
+		width: calc(100% - 30px);
+	}
+
+	@media screen and (min-width:480px) and (max-width:1199px) {
+		width: 100%;
+		max-width: 450px;
+	}
+}
+
+.is-hidden {
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+}
+
+
+
+.btn-close {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	z-index: 3;
+	width: 30px;
+	height: 30px;
+	background-color: #fff;
+	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 6px 9px 6px 5px;
+}
+
+.btn-close:hover .icon,
+.btn-close:focus .icon{
+	fill: #2196F3;
+}
+
+
+
+
+.form-label {
+	margin-bottom: 5px;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.16;
+	letter-spacing: 0.01em;
+	color: var(--main-text-color);
+}
+
+.button {
+	color: var(--main-title-color);
+	background: var(--white-color);
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	display: flex;
+	align-items: center;
+	letter-spacing: 0.06em;
+	transition: color var(--transform-time) linear, 
+					background-color var(--transform-time) linear,
+					box-shadow var(--transform-time) linear;
+	border: 0;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.main-button {
+	padding: 10px 32px;
+	color: var(--white-color);
+	background: var(--main-accente-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+
+.main-button:hover,
+.main-button:focus {
+	background: var(--white-color);
+	color: red;
+}
+
+.icon {
+	fill: currentColor;
+	margin-right: 10px;
+   width: 30px;
+	height: 30px;
+}
+
+.bg-love {
+   background-image: url(../img/01.jpg);
+   background-size: contain;
+   background-repeat: no-repeat;
+   // height: 100%;
+   // width: 100%;
+   height: 1280px;
+   width: 720px;
+}
