--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,6 +6,9 @@ body {
 	font-style: normal;
 	margin: 0;
 	// padding-top: 80px;
+	// outline: 1px solid red;
+	width: 100%;
+
 }
 
 // body.is-open {
