--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
   font-size: 14px;
   font-style: normal;
   margin: 0;
+  width: 100%;
 }
 
 img {
@@ -150,7 +151,7 @@ p {
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 528px;
-  height: 600px;
+  height: 400px;
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -206,7 +207,7 @@ p {
   color: var(--main-title-color);
   background: var(--white-color);
   font-weight: 700;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.88;
   display: flex;
   align-items: center;
@@ -231,7 +232,7 @@ p {
 }
 
 .icon {
-  fill: currentColor;
+  fill: #f321adb4;
   margin-right: 10px;
   width: 30px;
   height: 30px;
@@ -244,8 +245,8 @@ p {
   height: 100%;
   width: 100%;
   height: 1280px;
-  width: 720px;
-  padding-top: 200px;
+  max-width: 720px;
+  padding-top: 100px;
 }
 
 .btn-love {
@@ -255,9 +256,9 @@ p {
 
 .title-love {
   font-size: 30px;
-  color: black;
+  color: #ac2282ad;
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 .btn {
