--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@
 	transform: translate(-50%, -50%);
 	width: 100%;
 	max-width: 528px;
-   height: 600px;
+   height: 400px;
 	background-color: #fff;
 	border-radius: 4px;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -82,7 +82,7 @@
 	color: var(--main-title-color);
 	background: var(--white-color);
 	font-weight: 700;
-	font-size: 16px;
+	font-size: 12px;
 	line-height: 1.88;
 	display: flex;
 	align-items: center;
@@ -110,7 +110,7 @@
 }
 
 .icon {
-	fill: currentColor;
+	fill: #f321adb4;
 	margin-right: 10px;
    width: 30px;
 	height: 30px;
@@ -123,8 +123,8 @@
    height: 100%;
    width: 100%;
    height: 1280px;
-   width: 720px;
-   padding-top: 200px;
+   max-width: 720px;
+   padding-top: 100px;
 }
 
 .btn-love {
@@ -135,9 +135,9 @@
 
 .title-love {
    font-size: 30px;
-   color: black;
+   color: #ac2282ad;
    text-align: center;
-   margin-bottom: 60px;
+   margin-bottom: 20px;
 
 }
 
